ensure bg orb isnt visible

--- a/css/index.css
+++ b/css/index.css
@@ -120,6 +120,7 @@ section.video-section {
     height: 80vh;
     width: 100vw;
     box-sizing: border-box;
+    overflow: hidden;
     position: relative;
     padding: 0 10vw;
     margin-top: 10vh;
